Remove the id automatically generated to have a unique index for ELS (#125)
Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>