@@ -6,7 +6,6 @@
  */
 package com.powsybl.network.conversion.server;
 
-import com.google.common.collect.Iterables;
 import com.powsybl.commons.datasource.ReadOnlyDataSource;
 import com.powsybl.commons.datasource.ResourceDataSource;
 import com.powsybl.commons.datasource.ResourceSet;
@@ -28,8 +27,6 @@ import org.springframework.test.context.junit4.SpringRunner;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 import static org.junit.Assert.*;
 
@@ -61,16 +58,25 @@ public class EquipmentInfosServiceTests {
             EquipmentInfos.builder().networkUuid(NETWORK_UUID).variantId(VariantManagerConstants.INITIAL_VARIANT_ID).id("id1").name("name1").type(IdentifiableType.LOAD.name()).voltageLevels(Set.of(VoltageLevelInfos.builder().id("vl1").name("vl1").build())).substations(Set.of(SubstationInfos.builder().id("s1").name("s1").build())).build(),
             EquipmentInfos.builder().networkUuid(NETWORK_UUID).variantId(VariantManagerConstants.INITIAL_VARIANT_ID).id("id2").name("name2").type(IdentifiableType.LOAD.name()).voltageLevels(Set.of(VoltageLevelInfos.builder().id("vl2").name("vl2").build())).substations(Set.of(SubstationInfos.builder().id("s2").name("s2").build())).build()
         );
-
         equipmentInfosService.addAll(infos);
-        Iterable<EquipmentInfos> all = equipmentInfosService.findAll(NETWORK_UUID);
-        assertEquals(2, Iterables.size(all));
-        List<EquipmentInfos> allList = StreamSupport.stream(all.spliterator(), false)
-                .collect(Collectors.toList());
-        assertEquals(infos, allList);
+        List<EquipmentInfos> infosDB = equipmentInfosService.findAll(NETWORK_UUID);
+        assertEquals(2, infosDB.size());
+        assertEquals(infos, infosDB);
+        assertEquals(infos.stream().map(i -> i.getNetworkUuid() + "_" + i.getVariantId() + "_" + i.getId()).toList(), infosDB.stream().map(i -> i.getUniqueId()).toList());
+
+        // Change names but uniqueIds are same
+        infos = List.of(
+            EquipmentInfos.builder().networkUuid(NETWORK_UUID).variantId(VariantManagerConstants.INITIAL_VARIANT_ID).id("id1").name("newName1").type(IdentifiableType.LOAD.name()).voltageLevels(Set.of(VoltageLevelInfos.builder().id("vl1").name("vl1").build())).substations(Set.of(SubstationInfos.builder().id("s1").name("s1").build())).build(),
+            EquipmentInfos.builder().networkUuid(NETWORK_UUID).variantId(VariantManagerConstants.INITIAL_VARIANT_ID).id("id2").name("newName2").type(IdentifiableType.LOAD.name()).voltageLevels(Set.of(VoltageLevelInfos.builder().id("vl2").name("vl2").build())).substations(Set.of(SubstationInfos.builder().id("s2").name("s2").build())).build()
+        );
+        equipmentInfosService.addAll(infos);
+        infosDB = equipmentInfosService.findAll(NETWORK_UUID);
+        assertEquals(2, infosDB.size());
+        assertEquals(infos, infosDB);
+        assertEquals(infos.stream().map(i -> i.getNetworkUuid() + "_" + i.getVariantId() + "_" + i.getId()).toList(), infosDB.stream().map(i -> i.getUniqueId()).toList());
 
         equipmentInfosService.deleteAllOnInitialVariant(NETWORK_UUID);
-        assertEquals(0, Iterables.size(equipmentInfosService.findAll(NETWORK_UUID)));
+        assertEquals(0, equipmentInfosService.findAll(NETWORK_UUID).size());
     }
 
     @Test
@@ -80,7 +86,7 @@ public class EquipmentInfosServiceTests {
         UUID networkUuid = UUID.randomUUID();
 
         VoltageLevel vl = network.getVoltageLevel("BBE1AA1");
-        EquipmentInfos equipmentInfos = networkConversionService.toEquipmentInfos(vl, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
+        EquipmentInfos equipmentInfos = NetworkConversionService.toEquipmentInfos(vl, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
         EquipmentInfos expectedEquipmentInfos = EquipmentInfos.builder()
                 .networkUuid(networkUuid)
                 .variantId(VariantManagerConstants.INITIAL_VARIANT_ID)
@@ -93,7 +99,7 @@ public class EquipmentInfosServiceTests {
         assertEquals(expectedEquipmentInfos, equipmentInfos);
 
         Substation substation = network.getSubstation("BBE1AA");
-        equipmentInfos = networkConversionService.toEquipmentInfos(substation, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
+        equipmentInfos = NetworkConversionService.toEquipmentInfos(substation, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
         expectedEquipmentInfos = EquipmentInfos.builder()
                 .networkUuid(networkUuid)
                 .variantId(VariantManagerConstants.INITIAL_VARIANT_ID)
@@ -112,7 +118,7 @@ public class EquipmentInfosServiceTests {
         assertEquals(expectedEquipmentInfos, equipmentInfos);
 
         Switch switch1 = network.getSwitch("FRA1AA1_switch");
-        equipmentInfos = networkConversionService.toEquipmentInfos(switch1, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
+        equipmentInfos = NetworkConversionService.toEquipmentInfos(switch1, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
         expectedEquipmentInfos = EquipmentInfos.builder()
                 .networkUuid(networkUuid)
                 .variantId(VariantManagerConstants.INITIAL_VARIANT_ID)
@@ -125,7 +131,7 @@ public class EquipmentInfosServiceTests {
         assertEquals(expectedEquipmentInfos, equipmentInfos);
 
         Load load = network.getLoad("BBE1AA1 _load");
-        equipmentInfos = networkConversionService.toEquipmentInfos(load, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
+        equipmentInfos = NetworkConversionService.toEquipmentInfos(load, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
         expectedEquipmentInfos = EquipmentInfos.builder()
                 .networkUuid(networkUuid)
                 .variantId(VariantManagerConstants.INITIAL_VARIANT_ID)
@@ -138,7 +144,7 @@ public class EquipmentInfosServiceTests {
         assertEquals(expectedEquipmentInfos, equipmentInfos);
 
         Bus bus = network.getBusBreakerView().getBus("BBE1AA1 ");
-        equipmentInfos = networkConversionService.toEquipmentInfos(bus, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
+        equipmentInfos = NetworkConversionService.toEquipmentInfos(bus, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
         expectedEquipmentInfos = EquipmentInfos.builder()
                 .networkUuid(networkUuid)
                 .variantId(VariantManagerConstants.INITIAL_VARIANT_ID)
@@ -151,7 +157,7 @@ public class EquipmentInfosServiceTests {
         assertEquals(expectedEquipmentInfos, equipmentInfos);
 
         Generator generator = network.getGenerator("BBE1AA1 _generator");
-        equipmentInfos = networkConversionService.toEquipmentInfos(generator, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
+        equipmentInfos = NetworkConversionService.toEquipmentInfos(generator, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
         expectedEquipmentInfos = EquipmentInfos.builder()
                 .networkUuid(networkUuid)
                 .variantId(VariantManagerConstants.INITIAL_VARIANT_ID)
@@ -164,7 +170,7 @@ public class EquipmentInfosServiceTests {
         assertEquals(expectedEquipmentInfos, equipmentInfos);
 
         HvdcLine hvdcLine = network.getHvdcLine("FRA1AA_BBE1AA_hvdcline");
-        equipmentInfos = networkConversionService.toEquipmentInfos(hvdcLine, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
+        equipmentInfos = NetworkConversionService.toEquipmentInfos(hvdcLine, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
         expectedEquipmentInfos = EquipmentInfos.builder()
                 .networkUuid(networkUuid)
                 .variantId(VariantManagerConstants.INITIAL_VARIANT_ID)
@@ -177,7 +183,7 @@ public class EquipmentInfosServiceTests {
         assertEquals(expectedEquipmentInfos, equipmentInfos);
 
         TwoWindingsTransformer twoWindingsTransformer = network.getTwoWindingsTransformer("BBE1AA2  BBE3AA1  2");
-        equipmentInfos = networkConversionService.toEquipmentInfos(twoWindingsTransformer, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
+        equipmentInfos = NetworkConversionService.toEquipmentInfos(twoWindingsTransformer, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
         expectedEquipmentInfos = EquipmentInfos.builder()
                 .networkUuid(networkUuid)
                 .variantId(VariantManagerConstants.INITIAL_VARIANT_ID)
@@ -190,7 +196,7 @@ public class EquipmentInfosServiceTests {
         assertEquals(expectedEquipmentInfos, equipmentInfos);
 
         ThreeWindingsTransformer threeWindingsTransformer = network.getThreeWindingsTransformer("BBE1AA_w3t");
-        equipmentInfos = networkConversionService.toEquipmentInfos(threeWindingsTransformer, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
+        equipmentInfos = NetworkConversionService.toEquipmentInfos(threeWindingsTransformer, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
         expectedEquipmentInfos = EquipmentInfos.builder()
                 .networkUuid(networkUuid)
                 .variantId(VariantManagerConstants.INITIAL_VARIANT_ID)
@@ -203,7 +209,7 @@ public class EquipmentInfosServiceTests {
         assertEquals(expectedEquipmentInfos, equipmentInfos);
 
         Line line = network.getLine("BBE1AA1  BBE2AA1  1");
-        equipmentInfos = networkConversionService.toEquipmentInfos(line, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
+        equipmentInfos = NetworkConversionService.toEquipmentInfos(line, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
         expectedEquipmentInfos = EquipmentInfos.builder()
                 .networkUuid(networkUuid)
                 .variantId(VariantManagerConstants.INITIAL_VARIANT_ID)
@@ -221,7 +227,7 @@ public class EquipmentInfosServiceTests {
         networkUuid = UUID.randomUUID();
 
         line = network.getLine("LINE_S1VL1");
-        equipmentInfos = networkConversionService.toEquipmentInfos(line, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
+        equipmentInfos = NetworkConversionService.toEquipmentInfos(line, networkUuid, VariantManagerConstants.INITIAL_VARIANT_ID);
         expectedEquipmentInfos = EquipmentInfos.builder()
                 .networkUuid(networkUuid)
                 .variantId(VariantManagerConstants.INITIAL_VARIANT_ID)
